--- a/src/components/map/style.scss
+++ b/src/components/map/style.scss
@@ -9,4 +9,9 @@
     left: 50%;
     transform: translate(-50%, -100%);
   }
+
+  &Marker {
+    color: red;
+    transform: translate(-50%, -100%);
+  }
 }
