--- a/src/components/map/style.scss
+++ b/src/components/map/style.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables';
+
 .Map {
   width: 100%;
   height: 100%;
@@ -9,9 +11,18 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: $spacer*4 !important;
+    color: green;
   }
 
   &Marker {
+    &--hover{
+      opacity: 1 !important;
+      font-size: $spacer*6 !important;
+      transition: all .2s ease;
+    }
+    font-size: $spacer*5 !important;
+    opacity: 0.7 !important;
     transform: translate(-50%, -100%);
   }
 }
