--- a/src/components/map/style.scss
+++ b/src/components/map/style.scss
@@ -12,17 +12,18 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: $spacer*4 !important;
-    color: green;
+    color: $green;
   }
 
   &Marker {
-    &--hover{
+    font-size: $spacer*5 !important;
+    opacity: 0.7 !important;
+    transform: translate(-50%, -100%);
+
+    &--hover {
       opacity: 1 !important;
       font-size: $spacer*6 !important;
       transition: all .2s ease;
     }
-    font-size: $spacer*5 !important;
-    opacity: 0.7 !important;
-    transform: translate(-50%, -100%);
   }
 }
